samples/fr-platform/templates/idm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: idm
  namespace: sample
  labels:
    role: management
spec:
  containers:
    - image: forgerock-docker-public.bintray.io/forgerock/sample-fr-platform/idm:6.0.0
      imagePullPolicy: IfNotPresent
      name: openidm
      ports:
        - containerPort: 8444
          name: mutualssl
          protocol: TCP
      resources:
          requests:
            memory: "512Mi"
---
kind: Service
apiVersion: v1
metadata:
  name: idm-service
  namespace: sample
spec:
  ports:
    - port: 8444
      name: mutualssl
      targetPort: 8444
  selector:
    role: management
