samples/fr-platform/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: sample
spec:
  rules:
  - host: openam.sample.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: openam
          servicePort: 80
  - host: client-service.sample.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: client-service
          servicePort: 8080
  - host: rs-service.sample.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: rs-service
          servicePort: 8080
